--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #333;
+    background-color: #006A4E;
     color: #fff;
     padding: 10px 0;
     text-align: center;
