--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@
 
 body {
     font-family: "Bebas Neue", sans-serif;
-    background-image: url(../css/img/jason-mavrommatis-nyL-rzwP-Mk-unsplash.jpg);
+    background-image: url(../css/img/benjamin-jopen-2SfssudtyIA-unsplash.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -139,4 +139,8 @@ button {
     margin: 18px 0px 15px;
     text-align: center;
     font-size: 18px;
+}
+
+.register a:hover {
+    text-decoration: underline;
 }
